<resources>
    <string name="app_name">Desempenho Escolar</string>

    <string name="tv_email">Digite seu e-mail</string>
    <string name="tv_senha">Digite sua senha</string>
    <string name="bt_entrar">ENTRAR</string>
    <string name="hint_senha">senha</string>
    <string name="hint_email">e-mail</string>
    <string name="tv_desempenho_escolar">DESEMPENHO ESCOLAR</string>
    <string name="img_description">Desempenho Escolar</string>
    <string name="title_activity_modulo_administrador">moduloAdministrador</string>
    <string name="bt_voltar">VOLTAR</string>
    <string name="bt_gerencia_usuario">GERENCIAR USUÁRIOS</string>
    <string name="bt_gerencia_horarios">GERENCIAR HORÁRIOS</string>
    <string name="bt_add">Adicionar</string>
    <string name="bt_alt">Alterar</string>
    <string name="bt_del">Excluir</string>
    <string name="eta_nome" />
    <string name="tva_nome">Nome</string>
    <string name="hinta_nome">Digite o nome completo</string>
    <string name="tva_email">E-mail</string>
    <string name="eta_email" />
    <string name="hinta_email">Digite o e-mail</string>
    <string name="tva_senha">Senha</string>
    <string name="hinta_senha">Digite a senha</string>
    <string name="rda_admin">Administrador</string>
    <string name="tva_tipo">Tipo</string>
    <string name="rda_professor">Professor</string>
    <string name="rda_aluno">Aluno</string>
    <string name="bta_limpar">LIMPAR</string>
    <string name="bta_avancar">AVANÇAR</string>
    <string name="bta_voltar">VOLTAR</string>
    <string name="bta_salvar">SALVAR</string>
    <string name="bta_cancelar">CANCELAR</string>
    <string name="tva_cargo">Cargo</string>
    <string name="hinta_cargo">Digite o cargo</string>
    <string name="eta_cargo" />
    <string name="tva_turmas">Turmas</string>
    <string name="tva_disciplinas">Disciplinas</string>
    <string name="tva_turma">Turma</string>
    <string name="tvh_turma">Turma</string>
    <string name="tvh_horarios">Horários</string>
    <string name="tvh_segunda">Segunda</string>
    <string name="tvh_terca">Terça</string>
    <string name="tvh_quarta">Quarta</string>
    <string name="tvh_quinta">Quinta</string>
    <string name="tvh_sexta">Sexta</string>
    <string name="tvh_sabado">Sábado</string>
    <string name="bth_salvar">SALVAR ALTERAÇÕES</string>
    <string name="bth_carregar">CARREGAR</string>
    <string name="btm_desempenho">VERIFICAR DESEMPENHO</string>
    <string name="btm_horario">CONSULTAR HORÁRIO</string>
    <string name="bth_voltar">VOLTAR</string>
    <string name="tvd_por">Português</string>
    <string name="tvd_t1">1º TRI.</string>
    <string name="tvd_t2">2º TRI.</string>
    <string name="tvd_t3">3º TRI.</string>
    <string name="tvd_final">R. FINAL</string>
    <string name="tvd_art">Arte</string>
    <string name="tvd_cie">Ciências</string>
    <string name="tvd_ef">E.Física</string>
    <string name="tvd_er">E.Religioso</string>
    <string name="tvd_geo">Geografia</string>
    <string name="tvd_his">História</string>
    <string name="tvd_ing">Inglês</string>
    <string name="tvd_mat">Matemática</string>
    <string name="btd_voltar">VOLTAR</string>
    <string name="tvd_boletim">BOLETIM DE DESEMPENHO</string>
    <string name="tvd_n1">N</string>
    <string name="tvd_f1">F</string>
    <string name="hinte_busca">Digite o nome completo</string>
    <string name="tve_nome">Nome</string>
    <string name="bte_buscar">BUSCAR</string>
    <string name="bte_voltar">VOLTAR</string>
</resources>